# Obsidian-TimeMachine

./: .gitignore  LICENSE  README.md  pyproject.toml
ot/: __init__.py  config.py  git_ops.py  icloud.py  launchd_ops.py  logger.py  runner.py  scheduler.py  ssh.py  sync.py  sync_status.py
ot/cli/: __init__.py  main.py  menu.py  wizard.py
tests/: __init__.py  test_config.py  test_git_ops.py  test_logger.py  test_scheduler.py  test_sync.py
